kubernetes/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: default
spec:
  rules:
  - host: bexruzdev.todo.uz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-service-name
            port:
              number: 30009

# kubectl create ingress ingress-test --rule="wear.my-online-store.com/wear*=wear-service:80"
